# ladder_map

./: LICENSE  Makefile  README.md  fraggler.py  ladder_map.py  pyproject.toml  requirements.txt  setup.py  test-new-score-functions.ipynb  tutorial.ipynb  workbook.ipynb
conda-recipe/: meta.yaml
demo/: Coriell Ctrl 10-B05-2022-10-06-16-17-11-01.fsa
demo/4062_Dx/: 1_PRT_1_4062_A01_Dx.fsa  1_PRT_2_4062_A02_Dx.fsa  1_PRT_2_4062_B01_Dx.fsa  1_PRT_3_4062_A03_Dx.fsa  1_PRT_4_4062_A04_Dx.fsa  2_PRT_2_4062_B02_Dx.fsa  2_PRT_3_4062_B03_Dx.fsa  2_PRT_4_4062_B04_Dx.fsa  3_PRT_1_4062_C01_Dx.fsa  3_PRT_2_4062_C02_Dx.fsa  3_PRT_3_4062_C03_Dx.fsa  3_PRT_4_4062_C04_Dx.fsa  4_PRT_1_4062_D01_Dx.fsa  4_PRT_2_4062_D02_Dx.fsa  4_PRT_3_4062_D03_Dx.fsa  4_PRT_4_4062_D04_Dx.fsa  5_PRT_1_4062_E01_Dx.fsa  5_PRT_2_4062_E02_Dx.fsa  5_PRT_3_4062_E03_Dx.fsa  5_PRT_4_4062_E04_Dx.fsa  6_PRT_1_4062_F01_Dx.fsa  6_PRT_2_4062_F02_Dx.fsa  6_PRT_3_4062_F03_Dx.fsa  6_PRT_4_4062_F04_Dx.fsa  7_PRT_1_4062_G01_Dx.fsa  7_PRT_2_4062_G02_Dx.fsa  7_PRT_3_4062_G03_Dx.fsa  7_PRT_3_4062_H03_Dx.fsa  7_PRT_4_4062_G04_Dx.fsa  8_PRT_1_4062_H01_Dx.fsa  8_PRT_2_4062_H02_Dx.fsa  8_PRT_4_4062_H04_Dx.fsa
demo/4071_Dx 230113_PRT1_PRT3_rn/: PRT1_2_4071_B09_Dx.fsa  PRT1_3_4071_C08_Dx.fsa  PRT1_3_4071_C09_Dx.fsa  PRT1_4_4071_D08_Dx.fsa  PRT1_5_4071_E07_Dx.fsa  PRT1_5_4071_E08_Dx.fsa  PRT1_5_4071_E09_Dx.fsa  PRT1_6_4071_F08_Dx.fsa  PRT1_6_4071_F09_Dx.fsa  PRT1_7_4071_G09_Dx.fsa  (+32 more)
examples/: test.html
fragment_analyzer/: __init__.py  baseline_removal.py  ladder_map.py  peak_area.py
tutorials/: case-1-tutorial.ipynb
(+17 files in other folders)
